--- a/index.html
+++ b/index.html
@@ -10,6 +10,13 @@
   </head>
   <body>
 
+<div class="grid">
+  <div class="item">hesaitix.net</div>
+
+</div>
+
+
+<!--
     <div class="grid">
       <div class="item special">001</div>
       <div class="item">Nemorum Incola      </div>
@@ -20,7 +27,7 @@
       <h2>CSS Grid Layout</h2>
       <p>This is a two-dimensional layout system.</p>
     </div>
-
+-->
 
     <script src="app.js"></script>
   </body>
